minor spacing fix on buy sell component

--- a/app/assets/stylesheets/api/stocks.scss
+++ b/app/assets/stylesheets/api/stocks.scss
@@ -539,6 +539,12 @@
   background-color: rgb(66, 207, 160);
 }
 
+.bs-error-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1em;
+}
+
 .buy-sell-img-container {
   display: flex;
   justify-content: center;
